--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+  <style>
+    body {
+      bgColor: red;
+      color: white;
+    }
+  </style>
 </head>
 <body>
 <h1> Advance computer education </h1>
